# twelvedata-world-model-dataset

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: daily-update.yml  tests.yml
config/: dataset_card.md  features.yaml  hf.yaml  sectors.yaml  splits.yaml  symbols.yaml  timeframes.yaml
data/: _state.json
examples/: prompt_templates.md  sample_text.jsonl  sample_trajectories.jsonl
metadata/: DATASET_CARD.md  schema.json
notebooks/: 01_llm_finetuning.ipynb  02_world_model_training.ipynb  03_multimodal.ipynb
scripts/: _smoke_sample.py  backfill.py  build_release.py  check_integrity.py  repair_macro_suffixes.py  update_daily.py  validate_no_leakage.py
src/tdwm/: __init__.py  charts.py  client.py  corporate_actions.py  enrich.py  fetch.py  hf.py  indicators.py  release.py  schema.py  splits.py  state.py  storage.py  textify.py  trajectories.py
tests/: conftest.py  test_client_normalize.py  test_corporate_actions.py  test_enrich_macro.py  test_indicators_causal.py  test_splits.py  test_storage.py  test_textify.py  test_trajectories.py
