[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tdwm"
version = "0.1.0"
description = "Twelve Data financial world-model dataset pipeline."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Twelve Data" }]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
filterwarnings = [
  "error::DeprecationWarning",
  "ignore::DeprecationWarning:pandas",
  "ignore::DeprecationWarning:pyarrow",
]

[tool.ruff]
line-length = 100
target-version = "py310"
